add IDs to faq questions so we can link straight to them.

--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -76,19 +76,19 @@
                 -->
 
 
-                <dt><i class="fa fa-chevron-right"></i>When is the official release?</dt>
+                <dt id="release-date"><i class="fa fa-chevron-right"></i>When is the official release?</dt>
                 <dd>
                     April 4th. The extension mostly works right now, but we're still tweaking things.
                 </dd>
 
-                <dt><i class="fa fa-chevron-right"></i>Who's behind Unpaywall?</dt>
+                <dt id="who-is-behind-this"><i class="fa fa-chevron-right"></i>Who's behind Unpaywall?</dt>
                 <dd>
                     We're <a href="http://impactstory.org">Impactstory,</a>
                     a nonprofit working to supercharge science by making it
                     more open, reusable, and web-native.
                 </dd>
 
-                <dt><i class="fa fa-chevron-right"></i>Why did you make it?</dt>
+                <dt id="why-did-you-make-it"><i class="fa fa-chevron-right"></i>Why did you make it?</dt>
                 <dd>
                     Millions of researchers are currently uploading their own fulltext PDFs
                     to <a href="https://en.wikipedia.org/wiki/Preprint">preprint servers</a>
@@ -103,7 +103,7 @@
 
                 </dd>
 
-                <dt><i class="fa fa-chevron-right"></i>Can Unpaywall tell me whether an article is "Green" or "Gold" OA?</dt>
+                <dt id="identify-green-or-gold"><i class="fa fa-chevron-right"></i>Can Unpaywall tell me whether an article is "Green" or "Gold" OA?</dt>
                 <dd>Indeed we can. Click the green Unpaywall extension icon in
                     your browser toolbar and choose "options." Once there, tick "Color-code tab for Green and Gold OA."
                     Thenceforth, you'll enjoy a veritable rainbow of OA colorfully goodness as you browse different articles:
@@ -138,7 +138,7 @@
 
 
 
-                <dt><i class="fa fa-chevron-right"></i>How often does Unpaywall find full text?</dt>
+                <dt id="how-often-finds-fulltext"><i class="fa fa-chevron-right"></i>How often does Unpaywall find full text?</dt>
                 <dd>
                     About 25% of the time, although it varies a lot based on the age
                     and field of the article. The reason it's not 100% is
@@ -149,7 +149,7 @@
 
                 </dd>
 
-                <dt><i class="fa fa-chevron-right"></i>How's this different from Sci-Hub?</dt>
+                <dt id="different-from-sci-hub"><i class="fa fa-chevron-right"></i>How's this different from Sci-Hub?</dt>
                 <dd>
                     Like Unpaywall, Sci-Hub finds fulltext PDFs for paywalled articles. The main difference
                     is where those PDFs come from: Unpaywall finds PDFs legally uploaded
@@ -162,7 +162,7 @@
                     and supporting the growing open access movement.
                 </dd>
 
-                <dt><i class="fa fa-chevron-right"></i>How's this different from the Open Access Button?</dt>
+                <dt id="different-from-oa-button"><i class="fa fa-chevron-right"></i>How's this different from the Open Access Button?</dt>
                 <dd>
                     The <a href="https://openaccessbutton.org/">OA Button</a> and Unpaywall are similar. But the
                     OA Button is a more mature project
@@ -177,7 +177,7 @@
                     and make your own better extension!
                 </dd>
 
-                <dt><i class="fa fa-chevron-right"></i>How do you find all these fulltext articles?</dt>
+                <dt id="how-do-you-find-articles"><i class="fa fa-chevron-right"></i>How do you find all these fulltext articles?</dt>
                 <dd>
                     We gather information from thousands of different legal, open-access repositories with the
                     help many awesome open data sources, especially
@@ -191,7 +191,7 @@
                     way to leverage our infrastructure to build your own projects.
                 </dd>
 
-                <dt><i class="fa fa-chevron-right"></i>What's your privacy policy?</dt>
+                <dt id="privacy-policy"><i class="fa fa-chevron-right"></i>What's your privacy policy?</dt>
                 <dd>
                     The extension doesn't store or ask for any personal information from you, so when you use Unpaywall
                     we don't know who you are. The extension doesn't track your browsing history, and it
@@ -205,7 +205,7 @@
                     any kind of browser fingerprinting technology to identify your computer.
                 </dd>
 
-                <dt><i class="fa fa-chevron-right"></i>I found a bug</dt>
+                <dt id="report-bugs"><i class="fa fa-chevron-right"></i>I found a bug</dt>
                 <dd>
                     Sorry about that! Unfortunately this is pretty common, especially where publishers
                     don't follow standard practices for article display (as they often do not).
