--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -10,25 +10,24 @@
         </p>
         <p>To get started, try this example article:</p>
         <p>
-            <a href="http://rspa.royalsocietypublishing.org/content/454/1969/277">
-                Information-Theoretic Approach to Quantum Error Correction and Reversible Measurement
+            <a class="eg" href="http://rspa.royalsocietypublishing.org/content/454/1969/277">
+                Information-Theoretic Approach to Quantum Error Correction and Reversible Measurement.
             </a>
-            is paywalled in the <em>Proceedings of the Royal Society A,</em> but
+        </p>
+        <p>
+            It's paywalled in the <em>Proceedings of the Royal Society A,</em> but
             Unpaywall finds a free copy uploaded by the authors to the
             <a href="http://cds.cern.ch/">CERN document server.</a>
         </p>
-        <p>Happy reading!</p>
+        <p></p>
 
 
-        <p>
+        <p class="ps">
             PS for the Open Access nerds: if you want to really dive into articles' OA status, the Unpaywall tab
-            can change colors to indicate Green or Gold OA; enable it in settings.
+            can change colors to indicate Green or Gold OA, too; enable it in settings.
         </p>
 
 
     </div>
-
-
-
-
 </div>
+<div class="footer-container" ng-include="'footer.tpl.html'"></div>
