modifications to landing page, FAQ page.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -67,23 +67,28 @@
 
         <div class="more">
             <div class="links">
-            <a href="mailto:team@impactstory.org">
-                <i class="fa fa-envelope-o"></i>
-                Email
-            </a>
-            <a href="http://twitter.com/impactstory">
-                <i class="fa fa-twitter"></i>
-                Twitter
-            </a>
-            <a href="https://github.com/Impactstory/unpaywall">
-                <i class="fa fa-github"></i>
-                GitHub
-            </a>
+                <a href="mailto:team@impactstory.org">
+                    <i class="fa fa-envelope-o"></i>
+                    Email
+                </a>
+                <a href="http://twitter.com/impactstory">
+                    <i class="fa fa-twitter"></i>
+                    Twitter
+                </a>
+                <a href="https://github.com/Impactstory/unpaywall">
+                    <i class="fa fa-github"></i>
+                    GitHub
+                </a>
                 <a href="/faq">
                     <i class="fa fa-question-circle"></i>
                     FAQ
                 </a>
-        </div>
+            </div>
+            <div class="spacer"></div>
+            <div class="by">
+                Made with <i class="fa fa-heart"></i> by
+                <a href="/faq#who-is-behind-this">Impactstory.</a>
+            </div>
         </div>
     </div>
 
@@ -116,8 +121,8 @@
             <a class="dialog-button" href="" ng-click="cancel()">I'm good.</a>
 
             <a class="primary dialog-button"
-                       target="_blank"
-                       href="https://goo.gl/forms/LanJmpUSn6vw4Ylp2">
+               target="_blank"
+               href="https://goo.gl/forms/LanJmpUSn6vw4Ylp2">
                 Yep, let me know!
             </a>
         </md-dialog-actions>
