--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -16,15 +16,14 @@
         </p>
         <p>
             It's paywalled in the <em>Proceedings of the Royal Society A,</em> but
-            Unpaywall finds a free copy uploaded by the authors to the
-            <a href="http://cds.cern.ch/">CERN document server.</a>
+            Unpaywall finds a free copy uploaded by the authors to the CERN website.
         </p>
         <p></p>
 
 
         <p class="ps">
             PS for the Open Access nerds: if you want to really dive into articles' OA status, the Unpaywall tab
-            can change colors to indicate Green or Gold OA, too; enable it in settings.
+            can change colors to indicate Green or Gold OA, too. Enable it in settings.
         </p>
 
 
