--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -83,9 +83,11 @@
 
                 <dt id="who-is-behind-this"><i class="fa fa-chevron-right"></i>Who's behind Unpaywall?</dt>
                 <dd>
-                    We're <a href="http://impactstory.org">Impactstory,</a>
+                    We're <a href="http://impactstory.org/about">Impactstory,</a>
                     a nonprofit working to supercharge science by making it
-                    more open, reusable, and web-native.
+                    more open, reusable, and web-native. We're supported by grants from <span class="funders">
+                    the National Science Foundation and the Alfred P. Sloan Foundation
+            </span>
                 </dd>
 
                 <dt id="why-did-you-make-it"><i class="fa fa-chevron-right"></i>Why did you make it?</dt>
