--- a/static/src/header.tpl.html
+++ b/static/src/header.tpl.html
@@ -11,8 +11,8 @@
 
     <div class="links">
         <a href="/faq">
-            <i class="fa fa-question-circle-o"></i>
-            faq
+            <i class="fa fa-question-circle"></i>
+            FAQ
         </a>
         <a href="/" class="home">
             <i class="fa fa-home"></i>
