adds google analytics to website.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -31,6 +31,7 @@
             <div class="call-to-action-buttons">
                 <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha"
                    target="_blank"
+                   ng-click="ctaClick('chrome')"
                    class="main-button">
                     <div class="icon">
                         <i class="fa fa-chrome"></i>
