Don't separate "articles" in FAQ

--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -113,8 +113,8 @@
                         <li>
                             <div class="text">
                                 <span class="color gold">Gold tab</span> for <a
-                                    href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access">Gold OA</a> a
-                                rticles available from the publisher
+                                    href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access">Gold OA</a> 
+                                articles available from the publisher
                                 under an open license.
                                 <a class="eg" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0000308">(example)</a>
                             </div>
