pretty up the welcome page.

--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -4,25 +4,35 @@
         <h1>You've installed Unpaywall!</h1>
 
         <p>
-            We'll work in the background when you view research articles. If you see
-            the <span class="green">green tab,</span> click it to skip the paywall.
-            if you see a <span class="gray">gray tab</span> it means we came up empty.
+            When you view a research article, check the tab on the right of your screen:
         </p>
-        <p>To get started, try this example article:</p>
-        <p>
+            <ul>
+                <li class="green">
+                    <span class="tab green"><i class="fa fa-unlock-alt"></i></span>
+                    <span class="text green">green tab:</span>
+                    we found free, legal full text. Click it to read!
+                </li>
+                <li class="gray">
+                    <span class="tab gray"><i class="fa fa-lock"></i></span>
+                    <span class="text gray">gray tab:</span>
+                    we came up empty.
+                </li>
+            </ul>
+        <p>Try this example article to get started:</p>
+        <p class="eg">
             <a class="eg" href="http://rspa.royalsocietypublishing.org/content/454/1969/277">
+                <i class="fa fa-file-text-o"></i>
                 Information-Theoretic Approach to Quantum Error Correction and Reversible Measurement.
             </a>
         </p>
         <p>
-            It's paywalled in the <em>Proceedings of the Royal Society A,</em> but
+            It's $15 to read from the publisher, but
             Unpaywall finds a free copy uploaded by the authors to the CERN website.
         </p>
-        <p></p>
 
 
         <p class="ps">
-            PS for the Open Access nerds: if you want to really dive into articles' OA status, the Unpaywall tab
+            PS for the Open Access nerds: the Unpaywall tab
             can change colors to indicate Green or Gold OA, too. Enable it in settings.
         </p>
 
