--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -95,9 +95,8 @@
                     Millions of researchers are currently uploading their own fulltext PDFs
                     to <a href="https://en.wikipedia.org/wiki/Preprint">preprint servers</a>
                     and <a href="https://en.wikipedia.org/wiki/Institutional_repository">institutional repositories</a>
-                    worldwide, making them free for anyone to read. But we hated that there was no easy
-                    way to find them, especially not one integrated into our
-                    reading workflows. So we made one! Eventually, we hope tools like
+                    worldwide, making them free for anyone to read. But there was no easy
+                    way to find them as we browsed. So we made one! Eventually, we hope tools like
                     Unpaywall will nurture the transition to fully
                     <a href="https://en.wikipedia.org/wiki/Open_access">open access</a>
                     scholarly publishing, by closing the gap between readers and
@@ -142,12 +141,12 @@
 
                 <dt id="how-often-finds-fulltext"><i class="fa fa-chevron-right"></i>How often does Unpaywall find full text?</dt>
                 <dd>
-                    About 25% of the time, although it varies a lot based on the age
-                    and field of the article. The reason it's not 100% is
-                    because unfortunately not all authors upload their fulltext PDFs online&mdash;although
-                    the number is growing every day.
-                    There's actually been a bunch of research on this recently, and we're planning a blog
-                    post breaking it down&mdash;stay tuned.
+                    In a sample of 2016 cancer papers, Unpaywall users were able to read for free nearly 50% of the
+                    time–-with no subscription, and despite paywalls.  That percentage
+                    will vary by field and year of publication. But it is generally improving
+                    across the board,
+                    as as recent US open-access mandates come in to effect and
+                    as we improve our discovery techniques.
 
                 </dd>
 
@@ -172,8 +171,7 @@
                     The OA Button works on
                     articles without DOIs, and it helps you email a request for fulltext to the author if
                     none is available. It'll also help you find open datasets.
-                    Unpaywall is more of a one-trick pony, and largely built because folks wanted a demo for the
-                    open <a href="https://oadoi.org">oaDOI</a> API. The great thing is, both are open-source
+                    Unpaywall is more of a one-trick pony. The great thing is, both are open-source
                     and free, so you can install both, or
                     <a href="https://guides.github.com/activities/forking/">fork 'em</a>
                     and make your own better extension!
@@ -181,16 +179,17 @@
 
                 <dt id="how-do-you-find-articles"><i class="fa fa-chevron-right"></i>How do you find all these fulltext articles?</dt>
                 <dd>
-                    We gather information from thousands of different legal, open-access repositories with the
-                    help many awesome open data sources, especially
+                    We gather content from thousands of open-access repositories worldwide.
+                    To help us, we rely on some fantastic open data services, especially
+                    <a href="https://www.ncbi.nlm.nih.gov/pmc/">PubMed Central</a>,
                     <a href="https://doaj.org/">the DOAJ,</a>
-                    <a href="https://www.crossref.org/">Crossref,</a>
+                    <a href="https://www.crossref.org/">Crossref</a> (particulary their license info),
                     <a href="https://www.datacite.org/">DataCite,</a>
                     and <a href="https://www.base-search.net/">BASE.</a>
 
-                    In turn, we make all this data open for reuse via the
+                    After we put all this data together, we in turn make it open for reuse via the
                     <a href="http://oadoi.org/about">oaDOI</a> API: a free, fast, and very scalable
-                    way to leverage our infrastructure to build your own projects.
+                    way to leverage our data and infrastructure to support your own projects.
                 </dd>
 
                 <dt id="privacy-policy"><i class="fa fa-chevron-right"></i>What's your privacy policy?</dt>
