change twitter to @unpaywall.

--- a/static/src/footer.tpl.html
+++ b/static/src/footer.tpl.html
@@ -6,7 +6,7 @@
                 <i class="fa fa-envelope-o"></i>
                 Email
             </a>
-            <a href="http://twitter.com/impactstory">
+            <a href="http://twitter.com/unpaywall">
                 <i class="fa fa-twitter"></i>
                 Twitter
             </a>
@@ -31,7 +31,7 @@
         <div class="credit" flex="40" flex-xs="100">
             <span class="built-by">
                 Built with <i class="fa fa-heart"></i> at
-                <a href="http://impactstory.org/about">Impactstory</a>, with support from
+                <a href="faq#who-is-behind-this">Impactstory</a>, with support from
             </span>
             <span class="funders">
                  the National Science Foundation and the Alfred P. Sloan Foundation
