--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -61,13 +61,14 @@
 
 
 
+        <!-- use this special landing-page-only footer -->
         <div class="more">
             <div class="links">
                 <a href="mailto:team@impactstory.org">
                     <i class="fa fa-envelope-o"></i>
                     Email
                 </a>
-                <a href="http://twitter.com/impactstory">
+                <a href="http://twitter.com/unpaywall">
                     <i class="fa fa-twitter"></i>
                     Twitter
                 </a>
