--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -141,8 +141,13 @@
 
                 <dt id="how-often-finds-fulltext"><i class="fa fa-chevron-right"></i>How often does Unpaywall find full text?</dt>
                 <dd>
-                    In a sample of 2016 cancer papers, Unpaywall users were able to read for free nearly 50% of the
-                    time–-with no subscription, and despite paywalls.  That percentage
+                    About half the time. For example, in
+                    <a href="https://medium.com/@lauren.maggio01/can-your-doctor-see-the-cancer-research-reported-in-the-news-can-you-beb9270c301f#.g1t5smm6s">
+                         arecent study
+                    </a>
+                    examining the availability of 2016 cancer papers,
+                    Unpaywall users were able to read 40% of them for free–-with no subscription,
+                    and despite paywalls.  That percentage
                     will vary by field and year of publication. But it is generally improving
                     across the board,
                     as as recent US open-access mandates come in to effect and
