support installation on firefox.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -23,7 +23,7 @@
             <div class="cta">
 
                 <div class="button-info" ng-show="browser=='unsupported'">
-                    Requires desktop Firefox or Chrome.
+                    Requires Firefox or Chrome for desktop.
                 </div>
 
                 <div class="button-info" ng-show="browser != 'unsupported'">
@@ -38,6 +38,7 @@
                     <span class="firefox" ng-show="browser=='firefox'">
                         <i class="fa fa-plus"></i>
                         Add Unpaywall to Firefox
+                        <span class="small">on the Firefox web store</span>
                     </span>
                     <span class="fallback" ng-show="browser=='unsupported'">
                         <i class="fa fa-twitter"></i>
